syntax = "proto3";

package proto;

import "proto/expense.proto";
import "proto/auth.proto";
import "proto/group.proto";

option go_package = "github.com/bill-splitting/proto";

service BillSplitting {
    rpc GetAuthToken(GetAuthTokenRequest) returns (GetAuthTokenResponse);

    rpc CreateLineGroup(CreateLineGroupRequest) returns (CreateLineGroupResponse);
    rpc GetLineGroup(GetLineGroupRequest) returns (GetLineGroupResponse);
    rpc AddMembership(AddMembershipRequest) returns (AddMembershipResponse);
    rpc GetMembership(GetMembershipRequest) returns (GetMembershipResponse);
    
    rpc CreateExpense(CreateExpenseRequest) returns (CreateExpenseResponse);
    rpc ListExpense(ListExpenseRequest) returns (ListExpenseResponse);
    rpc ListExpenseSummary(ListExpenseSummaryRequest) returns (ListExpenseSummaryResponse);
}
