syntax = "proto3";

package proto;

option go_package = "github.com/bill-splitting/proto";

message CreateExpenseSummaryChartRequest {
    uint32 group_id = 1;
    string start_date = 2;
    string end_date = 3;
}

message CreateExpenseSummaryChartResponse {
    string url = 1;
}

message CreateExpenseRequest {
    uint32 group_id = 1;
    string category = 2;
    string description = 3;
    double origin_amount = 4;
    string origin_currency = 5;
    string date = 6;
}

message CreateExpenseResponse {
    uint32 id = 1;
    string category = 2;
    string description = 3;
    double amount = 4;
    string date = 5;
}

message CreateTrendingImageRequest {
    uint32 group_id = 1;
    string type = 2;
}

message CreateTrendingImageResponse {
    string url = 1;
}
